--- a/main.css
+++ b/main.css
@@ -1,9 +1,17 @@
 * {
     font-family: 'JetBrains Mono', monospace;
+    box-sizing: border-box;
 }
 
 h1, h2 {
     font-family: 'Monofett', cursive;
+    color: #271C1B;
+    font-weight: bold;
+    font-size: 5em;
+}
+
+h1 {
+    font-size: 7em;
 }
 
 body {
@@ -15,4 +23,36 @@ main {
     border-radius: 15px;
     margin: 2em;
     padding: 2em;
+    width: 100%-4em;
+}
+
+a, p {
+    font-size: 2.5em;
+}
+
+a {
+    background-color: #B0CDCF;
+    border: 5px solid #423D34;
+    color: #423D34;
+    font-weight: bold;
+    padding: 1em;
+    margin-bottom: 1em;
+    text-align: center;
+    display: block;
+}
+
+/* media queries*/
+@media (min-width: 700px) {
+    h1 {
+        font-size: 4em;
+    }
+    h2 {
+        font-size: 3em;
+    }
+    a, p {
+        font-size: 1.5em;
+    }
+    a {
+        display: inline;
+    }
 }
